--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,47 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Nextflow
+.idea/**
+.gradle
+.*.log*
+.cache/*
+.vagrant/*
+.cache/*
+.nextflow*
+.node-nextflow*
+.devcontainer
+.vscode/*
+*/*/bin/*
+**/build/**
+build/**
+modules/**/build/
+modules/**/*.iml
+modules/nextflow/work/
+**/out/*
+tmp/*
+work/*
+nextflow.eml
+nextflow.iml
+Vagrantfile
+resources/*
+test/*
+tools/*
+tests_other
+other
+docs/_build/
+./*.txt
+errors/
+misc/
+cloud/my-*
+docker-test
+docker/dist
+docker/nextflow
+temp
+.dockerignore
+.launch.classpath
+plugins-prod
+sandbox
+wave-tests
+
